added bootstrap and customizations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my first rails app</h1>
-<p>Sign Up  <%= link_to 'here', '#' %></p>
+<div class="jumbotron">
+<h1>My first rails app!!</h1>
+<p>Click here to <%= link_to 'sign up', '#', class: 'btn btn-success' %></p>
+</div>
