--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 <h1>My first rails app!!</h1>
 <p>Click here to <%= link_to 'sign up', '#', class: 'btn btn-success' %></p>
 </div>
