--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,9 @@
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><%= link_to 'Home', root_path %></li>
 		        <li><%= link_to 'About', about_path %></li>
+		        <% if user_signed_in? %>
+		        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+		        <% end %>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
