add names to users

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -8,7 +8,7 @@
 
       <div class="panel-body">
         <%= pin.description %> </br>
-        <strong><%= pin.user.email if pin.user %></strong>
+        <strong><%= pin.user.name if pin.user %></strong>
 
         <% if pin.user == current_user %>
           <div class="actions center">
