styled forms, updated about page, fixed navbar links

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,24 @@
+<div class="panel panel-default">
+	<div class="panel-heading center">	
+		<h1>About Me</h1>
+	</div>
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-offset-1 col-sm-5">
+				<h3>Hey this my first Rails app!!</h3> <br>
+				<p>My name is William Clark and I am a web developer. </p>
+				<p>Check out the sites that I have made as well as the projects that I am working on at: 
+				</p><br>
+				<div class="center">
+					<%= link_to 'WMTC Development', 'http://www.wmtclark.com', class: 'btn btn-info btn-sm' %>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<%= image_tag "me.png", class: 'img-responsive' %>
+			</div>
+		</div>
+	</div>
+</div>
 
-<h1>About Us</h1>
-<p>I am working on a rails pinterest application!</p>
+
+
