--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="panel panel-primary">
-  <div class="panel-heading">
+<div class="panel panel-primary ">
+  <div class="panel-heading center">
     <h2>Sign Up</h2>
   </div>
   <div class="panel-body">
@@ -8,12 +8,12 @@
 
       <div class="form-group">
         <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true %>
+        <%= f.text_field :name, autofocus: true, class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true %>
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
       </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -22,29 +22,28 @@
 
       <div class="form-group">
         <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
-        <%= f.password_field :current_password, autocomplete: "off" %>
+        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
       </div>
 
-      <div class="btn btn-success">
-        <%= f.submit "Update" %>
+      <div>
+        <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
   </div>
   <div class="panel-footer">
-    <h3>Cancel my account</h3>
-    <p>Unhappy?</p>
-    <div class="btn btn-danger">
-      <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+    <h4>Unhappy with your account?</h4>
+    <div>
+      <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %>
     </div>
   </div>
 </div>
