--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,12 @@
-
 <div class="panel panel-primary">
-	<div class="panel-heading"><h2>Sign up</h2></div>
+	<div class="panel-heading center"><h2>Sign up</h2></div>
 	<div class="panel-body">
 		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 		  <%= devise_error_messages! %>
 
 		  <div class="form-group">
 				<%= f.label :name %>
-  			<%= f.text_field :name, autofocus: true %>
+  			<%= f.text_field :name, autofocus: true, class: 'form-control' %>
 			</div>
 
 		  <div class="form-group">
