--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -2,6 +2,6 @@
 <h1>You are Pinteresting</h1>
 		<p>
 			<%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-success' %>
-			<%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary' %>
+			<%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
 		</p>
 </div>
