--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-primary ">
   <div class="panel-heading center">
-    <h2>Sign Up</h2>
+    <h2>Account Settings</h2>
   </div>
   <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -39,12 +39,14 @@
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
-  </div>
-  <div class="panel-footer">
+<br>
     <h4>Unhappy with your account?</h4>
     <div>
       <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %>
     </div>
   </div>
+  <div class="panel-footer">
+    <%= link_to "Back", :back %>
+  </div>
 </div>
-<%= link_to "Back", :back %>
+
