--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -11,17 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :image %><br>
     <%= f.file_field :image %>
   </div>
 
+  <br><br>
+
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, class: 'form-control' %>
   </div>
-
-  <div class="actions">
-    <%= f.submit %>
+  <br>
+  <div class="form group">
+    <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
