--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing pin</h1>
 
-<%= render 'form' %>
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h1>Edit Pin</h1>
+	</div>
+	<div class="panel-body">
+		<%= render 'form' %>
+	</div>	
+	<div class="panel-footer">
+		<%= link_to 'Back', pins_path %>
+	</div>
+</div>
 
-<%= link_to 'Show', @pin %> |
-<%= link_to 'Back', pins_path %>
+
+
+
+
