--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New pin</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', pins_path %>
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h1>New Pin</h1>
+	</div>
+	<div class="panel-body">
+		<%= render 'form' %>
+	</div>	
+	<div class="panel-footer">
+		<%= link_to 'Back', pins_path %>
+	</div>
+</div>
